--- a/Source/.godot/editor/editor_layout.cfg
+++ b/Source/.godot/editor/editor_layout.cfg
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/sample_scene.tscn", "res://Scenes/UI/Benchmark.tscn")
+open_scenes=PackedStringArray("res://Scenes/sample_scene.tscn", "res://Scenes/UI/Benchmark.tscn", "res://Scenes/player.tscn")
 current_scene="res://Scenes/sample_scene.tscn"
 center_split_offset=-286
 selected_default_debugger_tab_idx=0
