--- a/Source/.godot/editor/editor_layout.cfg
+++ b/Source/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Controllers/CharacterController.cs")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Textures/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/sample_scene.tscn", "res://Scenes/UI/Benchmark.tscn", "res://Scenes/player.tscn")
-current_scene="res://Scenes/sample_scene.tscn"
+current_scene="res://Scenes/player.tscn"
 center_split_offset=-286
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
