--- a/Source/.godot/editor/editor_layout.cfg
+++ b/Source/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Textures/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Shaders/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
